# example-graphql-rust

./: .env  .gitignore  Cargo.toml  README.md  test.db
migrations/20170124012402_create_users/: up.sql
src/: database_driver.rs  database_queries.rs  database_schema.rs  db.rs  graphql_driver.rs  graphql_schema.rs  main.rs  models.rs
